manifests/base/resources/data-connector-nfs/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-connector-nfs
    chart: data-connector-nfs-1.2.1
    heritage: Helm
    release: data-connector-nfs
  name: data-connector-nfs
  namespace: $(NAMESPACE)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-connector-nfs
      release: data-connector-nfs
  template:
    metadata:
      annotations:
        checksum/configs: a08f53b932bbb806f21ff354d4e8b226cee4c660f77966d7bb2844842d457308
        checksum/secrets: 138cb666ce82ccbba08aa7474e4ef492240a4d6574bffdc62d1084180495eae1
      labels:
        app: data-connector-nfs
        release: data-connector-nfs
    spec:
      containers:
        - env:
            - name: KEYS_URI
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: data-connector-nfs-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: data-connector-nfs-configs
            - name: PDS_URI
              valueFrom:
                configMapKeyRef:
                  key: pdsUri
                  name: data-connector-nfs-configs
            - name: SPACES_URI
              valueFrom:
                configMapKeyRef:
                  key: spacesUri
                  name: data-connector-nfs-configs
            - name: AUTH_ENABLED
              value: "true"
          image: qliktech-docker.jfrog.io/data-connector-nfs:1.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 50051
              name: grpc
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
          resources: null
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: data-connector-nfs-secrets
          secret:
            secretName: data-connector-nfs-secrets
---
