manifests/base/resources/data-connector-nfs/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: data-connector-nfs
    chart: data-connector-nfs-1.2.1
    heritage: Helm
    release: data-connector-nfs
  name: data-connector-nfs
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: data-connector-nfs
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: data-connector-nfs
    release: data-connector-nfs
  type: ClusterIP
---
