manifests/base/resources/data-connector-nfs/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/customdata/64/data-connector-nfs/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: data-connector-nfs
    chart: data-connector-nfs-1.2.1
    heritage: Helm
    release: data-connector-nfs
  name: data-connector-nfs
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: data-connector-nfs
          servicePort: 8080
        path: /customdata/64/data-connector-nfs
---
