manifests/base/resources/data-connector-nfs/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: data-connector-nfs
    chart: data-connector-nfs-1.2.1
    heritage: Helm
    release: data-connector-nfs
  name: data-connector-nfs
  namespace: $(NAMESPACE)
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: keys
          release: data-connector-nfs
    - podSelector:
        matchLabels:
          app: policy-decisions
          release: data-connector-nfs
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  podSelector:
    matchLabels:
      app: data-connector-nfs
      release: data-connector-nfs
  policyTypes:
  - Egress
---
